fixing bib dialog not showing

--- a/mod_app/static/css/teaching-analysis.css
+++ b/mod_app/static/css/teaching-analysis.css
@@ -38,13 +38,9 @@
 }
 
 #reference-modal {
-  display: none;
   width: 60vw;
   border-radius: 5px;
 
-  &.visible {
-    display: block;
-  }
   #modal__btn--close {
     cursor: pointer;
   }
